# Arbitrix

./: .gitignore  README.md
backend/: config.py  main.py  pyproject.toml  setup_db.sql
backend/agents/: businessman.py  lawyer.py  regulator.py  synthesis.py
backend/models/: schemas.py
backend/rag/: db.py  embedder.py  ingester.py  retriever.py
backend/scripts/: ingest_docs.py
backend/services/: orchestrator.py  pdf_extractor.py
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analyze/: AnalyzeClient.tsx  page.tsx
frontend/src/app/debate/: DebateClient.tsx  page.tsx
frontend/src/app/features/: page.tsx
frontend/src/app/verdict/: VerdictClient.tsx  page.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/arbitrix/: ContractTypeSelector.tsx  DisclaimerStrip.tsx  Hero.tsx  HowItWorks.tsx  KnowledgeSection.tsx  LiveDebate.tsx  Navbar.tsx  TrustSection.tsx  UploadZone.tsx  Verdict.tsx
frontend/src/components/ui/: calendar.tsx  chart.tsx  resizable.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/lib/: i18n.ts
