[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.27",
    "sse-starlette>=3.4.1",
    "uvicorn>=0.46.0",
]
